insidemesh/Namespace.inmesh.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: insidemesh
  labels:
    istio-injection: enabled
