insidemesh/Deployment.curl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl
  namespace: insidemesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
    spec:
      containers:
        - image: curlimages/curl
          name: curl
          command: ["sh", "-c", "while [ true ]; do sleep 999; done"]
