insidemesh/Deployment.hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: insidemesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - image: k8s.gcr.io/echoserver:1.10
          name: hello
