insidemesh/Service.hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: insidemesh
spec:
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 8080
